Fix readability issues with the Onboard Parameters treeview items in the light theme.

--- a/files/styles/style-light.css
+++ b/files/styles/style-light.css
@@ -549,6 +549,10 @@ QToolTip {
     color: #000;
 }
 
+QTreeView::item {
+	color: #000;
+}
+
 UASQuickViewItem QLabel {
     padding: 0;
     margin: 0;
